# ray-tracer

./: .gdb_history  .gitignore  README.md  ray  ray-solution
src/: CMakeLists.sources  CMakeLists.txt  RayTracer.cpp  RayTracer.h  general.h  main.cpp
src/SceneObjects/: Box.cpp  Box.h  Circle.cc  Circle.cpp  Circle.h  Cone.cpp  Cone.h  Cylinder.cpp  Cylinder.h  Quadric.cc  Quadric.cpp  Quadric.h  Sphere.cpp  Sphere.h  Square.cpp  Square.h  Torus.cc  Torus.cpp  Torus.h  solve.h  trimesh.cpp  trimesh.h
src/fileio/: bitmap.cpp  bitmap.h  buffer.cpp  buffer.h  images.cc  images.h  pngimage.cpp  pngimage.h
src/parser/: Parser.cpp  Parser.h  ParserException.cpp  ParserException.h  Token.cpp  Token.h  Tokenizer.cpp  Tokenizer.h
src/scene/: bbox.cc  bbox.h  bvh.cc  bvh.h  camera.cpp  camera.h  cubeMap.cpp  cubeMap.h  light.cpp  light.h  material.cpp  material.h  ray.cpp  ray.h  scene.cpp  scene.h
src/scenes/: cone.ray  cylinder.ray  easy2.ray  reflection.ray  reflection2.ray  scene.ray  scene_blank.ray  secret.pathray  sphere.ray  sphere_box.ray  spheres.ray  spheres1.ray  spheres_test1.ray  tentacles.ray
src/scenes/polymesh/: dragon.ray  dragon2.ray  easy1.ray  easy3.ray  easy4.ray  shell.ray  trimesh2.ray  z-polytest.ray
src/scenes/simple/: box_dist_atten.ray  (+8 more)
src/ui/: CommandLineUI.cpp  CommandLineUI.h  CubeMapChooser.cxx  CubeMapChooser.h  GraphicalUI.cpp  GraphicalUI.h  ModelerCamera.cpp  ModelerCamera.h  TraceGLWindow.cpp  TraceGLWindow.h  TraceUI.cc  TraceUI.h  debuggingView.cpp  debuggingView.h  debuggingWindow.cxx  debuggingWindow.h  glObjects.cpp
(+58 files in other folders)
